--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yael Berger
+name: yaelberger
 
 # Short bio or description (displayed in the header)
 description: A public servant and storyteller, blogging my way through trying to learn to Git Shit Done.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: 
 #
 # Flags below are optional
 #
